Fixed a layout bug - hidden/not.

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -657,6 +657,11 @@
       display: flex;
     }
   }
+  .xl\:hidden {
+    @media (width >= 80rem) {
+      display: none;
+    }
+  }
   .xl\:h-\[50vh\] {
     @media (width >= 80rem) {
       height: 50vh;
